@@ -17,7 +17,6 @@
 package org.apache.jackrabbit.oak.security.authorization.accesscontrol;
 
 import org.apache.jackrabbit.guava.common.collect.ImmutableList;
-import org.apache.jackrabbit.guava.common.collect.ImmutableMap;
 import org.apache.jackrabbit.guava.common.collect.Iterables;
 import org.apache.jackrabbit.oak.api.Tree;
 import org.apache.jackrabbit.oak.namepath.NamePathMapper;
@@ -46,7 +45,7 @@ import static org.mockito.Mockito.when;
 
 public class RemappedPrivilegeNamesTest extends AbstractAccessControlTest {
 
-    private static final Map<String, String> LOCAL_NAME_MAPPINGS = ImmutableMap.of(
+    private static final Map<String, String> LOCAL_NAME_MAPPINGS = Map.of(
             "a","internal",
             "b","http://www.jcp.org/jcr/1.0",
             "c","http://jackrabbit.apache.org/oak/ns/1.0"
