@@ -17,7 +17,6 @@
 package org.apache.jackrabbit.oak.security.user;
 
 import org.apache.jackrabbit.guava.common.collect.ImmutableList;
-import org.apache.jackrabbit.guava.common.collect.ImmutableMap;
 import org.apache.jackrabbit.api.security.user.User;
 import org.apache.jackrabbit.oak.AbstractSecurityTest;
 import org.apache.jackrabbit.oak.spi.security.ConfigurationParameters;
@@ -36,6 +35,8 @@ import static org.apache.jackrabbit.oak.spi.security.user.UserConstants.CREDENTI
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNull;
 import static org.junit.Assert.fail;
+
+import java.util.Map;
 
 /**
  * @see <a href="https://issues.apache.org/jira/browse/OAK-3463">OAK-3463</a>
@@ -59,7 +60,7 @@ public class PasswordExpiryHistoryTest extends AbstractSecurityTest {
         final AuthorizableActionProvider actionProvider = securityProvider -> ImmutableList.of(pwAction);
 
         ConfigurationParameters userConfig = ConfigurationParameters.of(
-                ImmutableMap.of(
+                Map.of(
                         UserConstants.PARAM_AUTHORIZABLE_ACTION_PROVIDER, actionProvider,
                         UserConstants.PARAM_PASSWORD_MAX_AGE, 10,
                         UserConstants.PARAM_PASSWORD_HISTORY_SIZE, 10
